--- a/src/container/Login/login.scss
+++ b/src/container/Login/login.scss
@@ -8,6 +8,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   border-radius: 6px;
+  box-shadow: 0 0 4px #c4c4c4;
 
   .buttons-container {
     .login-header {
