add addres form ui

--- a/src/container/DeliverTo/deliver-to.scss
+++ b/src/container/DeliverTo/deliver-to.scss
@@ -17,6 +17,7 @@
   .add-new-address {
     font-weight: 500;
     margin-bottom: 20px;
+    cursor: pointer;
     span {
       display: inline-block;
       border: 1px solid;
