--- a/src/components/AddressForm/address-form.scss
+++ b/src/components/AddressForm/address-form.scss
@@ -10,10 +10,13 @@
       flex-direction: column;
       label {
         font-size: 12px;
+        margin-bottom: 8px;
       }
       input {
         width: 300px;
         height: 40px;
+        border-radius: 6px;
+        border-width: 1px;
       }
     }
   }
