--- a/src/components/Suggestion/suggestion.scss
+++ b/src/components/Suggestion/suggestion.scss
@@ -10,7 +10,8 @@
     width: calc(100% - 20px);
     border-bottom-left-radius: 21px;
     border-bottom-right-radius: 21px;
-
+    color: white;
+    text-align: center;
     opacity: 0.41;
     background-image: linear-gradient(
       79deg,
