--- a/src/components/ProductImage/product.scss
+++ b/src/components/ProductImage/product.scss
@@ -3,11 +3,12 @@
   height: 100%;
   width: 100%;
   background-color: white;
-  border-radius: 21px;
+  border-radius: 20px;
   img {
     height: 100%;
     width: 100%;
-    object-fit: contain;
+    object-fit: cover;
+    border-radius: 20px;
   }
 
   .overlay {
