--- a/src/components/Suggestion/suggestion.scss
+++ b/src/components/Suggestion/suggestion.scss
@@ -1,8 +1,8 @@
 .suggestion {
   padding: 10px;
   position: relative;
-  width: 250px;
-  height: 180px;
+  width: 100%;
+  height: 100%;
   .suggestion-footer {
     position: absolute;
     z-index: 10;
