--- a/src/container/Menu/menu.scss
+++ b/src/container/Menu/menu.scss
@@ -10,19 +10,27 @@
   .menu {
     width: 25%;
     height: 100%;
-    border-radius: 6px;
-    box-shadow: 0 4px 4px 4px #c4c4c4;
+    border-top-right-radius: 6px;
+    border-bottom-right-radius: 6px;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.2);
     background: white;
 
     .title {
       text-align: center;
-      font-size: 38px;
+      font-size: 26px;
       font-weight: 500;
       margin-bottom: 20px;
+      display: flex;
+      justify-content: space-evenly;
+      align-items: center;
+      div {
+        margin-left: auto;
+        margin-right: auto;
+      }
     }
     .name {
       text-align: center;
-      font-size: 24px;
+      font-size: 18px;
       background: black;
       border-radius: 4px;
       color: white;
