--- a/src/components/Suggestion/suggestion.scss
+++ b/src/components/Suggestion/suggestion.scss
@@ -12,11 +12,10 @@
     border-bottom-right-radius: 21px;
     color: white;
     text-align: center;
-    opacity: 0.41;
     background-image: linear-gradient(
       79deg,
-      #000000 3%,
-      rgba(0, 0, 0, 0.5) 100%
+      rgba(0, 0, 0, 0.5) 3%,
+      rgba(0, 0, 0, 0.2) 100%
     );
   }
 }
