--- a/src/container/Header/header.scss
+++ b/src/container/Header/header.scss
@@ -3,13 +3,17 @@
   width: 100%;
   top: 0;
   z-index: 99;
+  transition: background-color 0.3s;
+  &.scrolled {
+    background-color: rgb(0, 0, 0);
+  }
 }
 .home-header {
   display: flex;
   height: 50px;
   align-items: center;
   font-size: 22px;
-  background: rgba(0, 0, 0, 0.4);
+  background-color: rgba(0, 0, 0, 0.1);
   color: white;
   strong {
     margin-left: 30px;
