--- a/src/container/ProductDetails/product-details.scss
+++ b/src/container/ProductDetails/product-details.scss
@@ -29,14 +29,16 @@
       margin-bottom: 10px;
     }
     .description {
+      font-size: 14px;
       margin-bottom: 10px;
     }
     .size {
       font-weight: 500;
-      font-size: 17px;
+      font-size: 18px;
+      margin-bottom: 5px;
     }
     .size-list {
-      font-size: 12px;
+      font-size: 14px;
       margin-bottom: 10px;
     }
     .quantity {
@@ -50,6 +52,9 @@
       border-radius: 4px;
       font-size: 14px;
       margin-bottom: 10px;
+      height: 21px;
+
+      cursor: pointer;
     }
   }
 }
