--- a/src/container/layout/layout.scss
+++ b/src/container/layout/layout.scss
@@ -1,3 +1,12 @@
 .layout {
   height: 100%;
+
+  .home-page {
+    height: 100%;
+    position: relative;
+
+    .product-header {
+      background-color: black;
+    }
+  }
 }
