--- a/src/container/layout/layout.scss
+++ b/src/container/layout/layout.scss
@@ -8,5 +8,9 @@
     .product-header {
       background-color: black;
     }
+    .home-footer {
+      height: 320px;
+      background-color: #32353c;
+    }
   }
 }
