--- a/src/components/AddressForm/address-form.scss
+++ b/src/components/AddressForm/address-form.scss
@@ -1,3 +1,5 @@
+@import "../../styles/variables.scss";
+
 .address-form {
   .row {
     display: flex;
@@ -9,7 +11,7 @@
       display: flex;
       flex-direction: column;
       label {
-        font-size: 12px;
+        font-size: $very-small-font;
         margin-bottom: 8px;
       }
       input {
