--- a/src/container/Header/header.scss
+++ b/src/container/Header/header.scss
@@ -1,3 +1,5 @@
+@import "../../styles/variables.scss";
+
 .header-area {
   position: fixed;
   width: 100%;
@@ -12,7 +14,7 @@
   display: flex;
   height: 50px;
   align-items: center;
-  font-size: 22px;
+  font-size: $medium-font;
   background-color: rgba(0, 0, 0, 0.1);
   color: white;
   strong {
