--- a/src/container/HomePage/home-page.scss
+++ b/src/container/HomePage/home-page.scss
@@ -1,3 +1,5 @@
+@import "../../styles/variables.scss";
+
 .closet {
   position: relative;
   width: 100%;
@@ -16,12 +18,12 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 42px;
+    font-size: 4.2rem;
 
     .sub-title {
       width: 100%;
       text-align: center;
-      font-size: 26px;
+      font-size: $sub-header-font;
       span {
         display: inline-block;
         width: 150px;
