--- a/src/components/AddressForm/address-form.scss
+++ b/src/components/AddressForm/address-form.scss
@@ -4,12 +4,14 @@
   .row {
     display: flex;
     justify-content: space-between;
-    width: 800px;
+    max-width: 800px;
     margin: 15px;
+    flex-wrap: wrap;
 
     .column {
       display: flex;
       flex-direction: column;
+      margin: 10px;
       label {
         font-size: $very-small-font;
         margin-bottom: 8px;
