--- a/src/components/Suggestion/suggestion.scss
+++ b/src/components/Suggestion/suggestion.scss
@@ -1,3 +1,5 @@
+@import "../../styles/variables.scss";
+
 .suggestion {
   padding: 10px;
   position: relative;
@@ -12,6 +14,7 @@
     border-bottom-right-radius: 21px;
     color: white;
     text-align: center;
+    font-size: $medium-font;
     background-image: linear-gradient(
       79deg,
       rgba(0, 0, 0, 0.5) 3%,
