--- a/src/container/ProductList/product-list.scss
+++ b/src/container/ProductList/product-list.scss
@@ -11,7 +11,9 @@
       font-size: $sub-header-font;
     }
     .product-detail {
-      text-align: center;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
   }
 }
