--- a/src/container/DeliverTo/deliver-to.scss
+++ b/src/container/DeliverTo/deliver-to.scss
@@ -6,7 +6,8 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  margin: 20px 0;
+  margin-top: 60px;
+  height: 100%;
 
   .header {
     font-size: $sub-header-font;
