--- a/src/container/HomePage/home-page.scss
+++ b/src/container/HomePage/home-page.scss
@@ -26,7 +26,7 @@
       font-size: $sub-header-font;
       span {
         display: inline-block;
-        width: 150px;
+        width: 15%;
         background: white;
         border: 0.5px solid white;
         margin: 0 10px 8px;
