--- a/src/container/Menu/menu.scss
+++ b/src/container/Menu/menu.scss
@@ -16,6 +16,9 @@
     border-bottom-right-radius: 6px;
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.2);
     background: white;
+    display: flex;
+    flex-direction: column;
+    padding: 5px;
 
     .title {
       text-align: center;
@@ -25,6 +28,7 @@
       display: flex;
       justify-content: space-evenly;
       align-items: center;
+      cursor: pointer;
       div {
         margin-left: auto;
         margin-right: auto;
@@ -37,12 +41,20 @@
       border-radius: 4px;
       color: white;
       margin-bottom: 40px;
-      padding-bottom: 5px;
+      padding: 5px;
     }
     .categories {
       header {
         font-size: $small-font;
         margin-bottom: 20px;
+      }
+      div {
+        padding: 5px;
+        &:hover {
+          background-color: #c4c4c4;
+          cursor: pointer;
+          border-radius: 4px;
+        }
       }
       margin: 0 20px 40px 20px;
     }
@@ -50,6 +62,23 @@
       border-top: 1px solid #c4c4c4;
       margin: 0 20px;
       padding-top: 20px;
+      div {
+        padding: 5px;
+        &:hover {
+          background-color: #c4c4c4;
+          cursor: pointer;
+          border-radius: 4px;
+        }
+      }
+    }
+    .logout {
+      font-size: $very-small-font;
+      padding: 10px;
+      margin: auto 10px 50px;
+      text-align: center;
+      border-radius: 5px;
+      background-color: #ebebeb;
+      cursor: pointer;
     }
   }
 }
