add past orders screen

--- a/src/container/ProductSlide/product-slide.scss
+++ b/src/container/ProductSlide/product-slide.scss
@@ -29,7 +29,7 @@
     margin-left: auto;
     font-size: $very-small-font;
     &::before {
-      content: "$ ";
+      content: "₹ ";
     }
   }
 }
