--- a/src/container/Login/login.scss
+++ b/src/container/Login/login.scss
@@ -10,7 +10,8 @@
   border-radius: 6px;
   // box-shadow: 0 0 4px #c4c4c4;
   border: 1px solid;
-
+  .close {
+  }
   .buttons-container {
     .login-header {
       color: black;
