--- a/src/container/ProductDetails/product-details.scss
+++ b/src/container/ProductDetails/product-details.scss
@@ -47,6 +47,8 @@
         margin-bottom: 10px;
       }
       .quantity {
+        font-weight: 500;
+        font-size: $small-font;
         margin-bottom: 10px;
       }
       .cart {
