--- a/src/container/Header/header.scss
+++ b/src/container/Header/header.scss
@@ -34,7 +34,7 @@
     }
   }
   .user-area {
-    width: 30%;
+    width: 20%;
     margin-left: auto;
     display: flex;
     .login-signup {
@@ -46,9 +46,28 @@
       align-items: center;
       margin-left: auto;
       margin-right: 20px;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
     .cart {
       margin-right: 25px;
+      position: relative;
+      .cart-count {
+        position: absolute;
+        top: 0px;
+        left: 100%;
+        font-size: 10px;
+        background-color: red;
+        width: 14px;
+        height: 14px;
+        padding: 2px;
+        border-radius: 50%;
+        display: flex;
+        text-align: center;
+        align-items: center;
+        justify-content: center;
+      }
     }
   }
 }
