--- a/src/container/Header/header.scss
+++ b/src/container/Header/header.scss
@@ -26,7 +26,11 @@
     align-items: center;
     margin-left: auto;
     width: 50%;
+    img {
+      margin-right: 10px;
+    }
     input {
+      padding: 10px;
       width: 100%;
       height: 100%;
       border-radius: 4px;
