--- a/src/container/Login/login.scss
+++ b/src/container/Login/login.scss
@@ -26,6 +26,10 @@
       margin-bottom: auto;
       font-size: 1.2em;
     }
+    img {
+      width: 16px;
+      margin-right: 10px;
+    }
     .google-btn {
       margin-bottom: 10px;
     }
