--- a/src/container/ProductList/product-list.scss
+++ b/src/container/ProductList/product-list.scss
@@ -5,7 +5,7 @@
   .product-list {
     margin-top: 60px;
     .loading {
-      text-align: center;
+      height: 500px; //TODO
     }
     .list-header {
       font-weight: 600;
