--- a/src/container/Payment/payment.scss
+++ b/src/container/Payment/payment.scss
@@ -2,6 +2,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+
+  .deliver-to-container {
+    min-height: 30% !important;
+  }
 
   margin-bottom: 30px;
+  height: 100%;
 }
