make UI changes

--- a/src/container/Login/login.scss
+++ b/src/container/Login/login.scss
@@ -1,7 +1,7 @@
 .login {
   position: fixed;
   background: white;
-  width: 50%;
+  width: 40%;
   height: 50%;
   z-index: 999;
   top: 50%;
@@ -11,7 +11,8 @@
   // box-shadow: 0 0 4px #c4c4c4;
   border: 1px solid;
   .close {
-    float: left;
+    position: absolute;
+    // float: left;
     margin: 10px;
   }
   .buttons-container {
