--- a/src/container/ProductDetails/product-details.scss
+++ b/src/container/ProductDetails/product-details.scss
@@ -3,7 +3,7 @@
 .product-details-wrapper {
   .product-details {
     display: flex;
-    margin-top: 60px;
+    margin-top: 30px;
     min-height: 500px;
 
     height: 80%;
@@ -28,38 +28,45 @@
         margin-bottom: 10px;
       }
       .price {
-        font-weight: 500;
+        font-weight: 600;
         font-size: $small-font;
         margin-bottom: 10px;
       }
       .description {
         font-size: $very-small-font;
-        margin-bottom: 10px;
+        margin-bottom: 15px;
         opacity: 0.7;
       }
       .size {
-        font-weight: 500;
+        font-weight: 600;
         font-size: $small-font;
-        margin-bottom: 5px;
+        margin-bottom: 10px;
       }
       .size-list {
         font-size: $very-small-font;
-        margin-bottom: 10px;
+        margin-bottom: 15px;
       }
       .quantity {
-        font-weight: 500;
+        font-weight: 600;
         font-size: $small-font;
         margin-bottom: 10px;
       }
       .cart {
         background: black;
         color: white;
-        width: 100px;
+        width: 150px;
         text-align: center;
         border-radius: 4px;
         font-size: $very-small-font;
         margin-bottom: 10px;
         padding: 10px;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        img {
+          margin-right: 10px;
+        }
 
         cursor: pointer;
       }
