--- a/src/container/Payment/payment.scss
+++ b/src/container/Payment/payment.scss
@@ -5,9 +5,9 @@
   justify-content: center;
 
   .deliver-to-container {
-    min-height: 30% !important;
+    // min-height: 30% !important;
   }
 
   margin-bottom: 30px;
-  height: 100%;
+  // height: 100%;
 }
