--- a/src/container/ProductList/product-list.scss
+++ b/src/container/ProductList/product-list.scss
@@ -3,7 +3,7 @@
 .list-wrapper {
   min-height: 500px;
   .product-list {
-    margin-top: 60px;
+    margin-top: 100px;
     .loading {
       height: 500px; //TODO
     }
@@ -11,6 +11,7 @@
       font-weight: 600;
       text-align: center;
       font-size: $sub-header-font;
+      margin-bottom: 30px;
     }
     .product-detail {
       display: flex;
