--- a/src/container/ProductSlide/product-slide.scss
+++ b/src/container/ProductSlide/product-slide.scss
@@ -11,16 +11,26 @@
 
   border-radius: 10px;
   box-shadow: 0 0 8px 0 rgba(40, 44, 181, 0.16);
+  .overlay {
+    display: none;
+  }
+  img {
+    transition: transform 0.3s linear 0.2s;
+  }
+
   &:hover {
     box-shadow: 0 0 16px 0 rgba(40, 44, 181, 0.16);
     cursor: pointer;
+    img {
+      transform: scale(1.5);
+    }
   }
   margin: 20px;
   .image {
     width: 100px;
   }
   .title {
-    margin-left: 3rem;
+    margin-left: 6rem;
     margin-right: auto;
     font-size: $small-font;
     max-width: 70%;
@@ -28,6 +38,7 @@
   .price {
     margin-left: auto;
     font-size: $very-small-font;
+    font-weight: 600;
     &::before {
       content: "₹ ";
     }
