--- a/src/components/AddressForm/address-form.scss
+++ b/src/components/AddressForm/address-form.scss
@@ -1,13 +1,14 @@
 @import "../../styles/variables.scss";
 
 .address-form {
+  width: 65%;
   .row {
     display: flex;
     justify-content: space-between;
     max-width: 800px;
     margin: 15px;
     flex-wrap: wrap;
-
+    width: 100%;
     .column {
       display: flex;
       flex-direction: column;
