--- a/src/container/Suggestions/suggestions.scss
+++ b/src/container/Suggestions/suggestions.scss
@@ -2,14 +2,15 @@
 .suggesions-wrapper {
   margin: 40px 20px;
   text-align: center;
+  box-shadow: 0px 3px 4px #c4c4c4;
   .suggestion-title {
-    font-size: $sub-header-font;
+    font-size: $medium-font;
     font-weight: 600;
   }
   .suggestions {
     display: flex;
     flex-direction: row;
-    height: 200px;
+    height: 150px;
     margin: 40px 0;
     img {
       object-fit: contain;
