--- a/src/components/PastOrderSlide/past-order-slide.scss
+++ b/src/components/PastOrderSlide/past-order-slide.scss
@@ -6,6 +6,12 @@
   justify-content: space-around;
   width: 100%;
   margin: 30px 0;
+  .loading {
+    height: 140px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 
   .image {
     width: 100px;
@@ -24,7 +30,7 @@
       font-size: $small-font;
     }
     .date {
-      color: #c4c4c4;
+      // color: #c4c4c4;
     }
     .order-btn {
       width: 30%;
