--- a/src/container/PastOrders/past-orders.scss
+++ b/src/container/PastOrders/past-orders.scss
@@ -3,6 +3,7 @@
 .past-orders {
   display: flex;
   flex-direction: column;
+  // height: 100%;
   min-height: 100%;
   width: 100%;
   justify-content: flex-start;
